2009-12-09  Ken Brown  <kbrown@cornell.edu>  (tiny change)

	* s/cygwin.h (G_SLICE_ALWAYS_MALLOC): New variable.

	* emacs.c (main): Set the G_SLICE environment variable for Cygwin
	GTK builds.

2009-12-07  Andreas Schwab  <schwab@linux-m68k.org>

	* unexelf.c (unexec): Don't search for .data twice.

2009-12-05  Chong Yidong  <cyd@stupidchicken.com>

	* xdisp.c (push_display_prop): Don't set avoid_cursor_p.  Return 0
	if push failed.
	(handle_line_prefix): Set avoid_cursor_p here.  Check return value
	of push_display_prop (Bug#5000).

	* xfaces.c (Fx_family_fonts): Handle 2009-07-14 change to return
	value of font_list_entities (Bug#5085).

2009-12-04  Juanma Barranquero  <lekktu@gmail.com>

	Fix `string-to-number' to deal consistently with integers and floats.
	* lread.c (isfloat_string): New argument ignore_trailing to accept all
	trailing characters, not just whitespace.
	(read1): Pass new arg 0 to keep old behavior.
	* data.c (Fstring_to_number): Pass 1 to isfloat_string to ignore
	trailing chars, as it is already done for integers.  Doc fixes.
	* lisp.h (isfloat_string): Add new arg to declaration of isfloat_string.

2009-12-04  Eli Zaretskii  <eliz@gnu.org>

	* dispextern.h (enum prop_idx) <AUTO_COMPOSED_PROP_IDX>: Delete
	unused enumeration value.

2009-12-03  Eli Zaretskii  <eliz@gnu.org>

	* Makefile.in (lisp, shortlisp): Replace indian.el with indian.elc.

2009-12-03  Daniel Hackney  <dan@haxney.org>  (tiny change)

	* process.c (Fmake_network_process): Fix up the tests for
	"connectionless socket", so they DTRT for seqpacket sockets as well.

2009-12-03  Stefan Monnier  <monnier@iro.umontreal.ca>

	* process.c (Qseqpacket): New symbol.
	(HAVE_SEQPACKET): New macro.
	(Fmake_network_process): Accept new :type `seqpacket'.
	(init_process): Add `seqpacket' feature when applicable.
	(syms_of_process): Initialize Qseqpacket.

2009-12-01  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* font.c (font_load_for_lface, font_open_by_name): Don't store name