@@ -1,3 +1,11 @@
+2009-12-09  Andreas Schwab  <schwab@linux-m68k.org>
+
+	Fix implicit function declarations.
+	* cmds.c: Include "frame.h".
+	* frame.c: Include "font.h" also if !HAVE_WINDOW_SYSTEM.
+	* frame.h: Move declaration of delete_frame outside of
+	HAVE_WINDOW_SYSTEM.
+
 2009-12-09  Ken Brown  <kbrown@cornell.edu>  (tiny change)
 
 	* s/cygwin.h (G_SLICE_ALWAYS_MALLOC): New variable.
